# Data-structure

./: CMakeLists.txt  README.md
LinkList/: CMakeLists.txt
SqList/: CMakeLists.txt
SqList/inc/: HomeWork.h  SqList.h
SqList/src/: HomeWork.cpp  SqList.cpp
test/: CMakeLists.txt  main.cpp
